created login and register pages

--- a/src/pages/register/register.module.css
+++ b/src/pages/register/register.module.css
@@ -1,11 +1,12 @@
 .Regcontainer {
     display: flex;
     flex-direction: column;
-    background-color: antiquewhite;
+    background-color: aliceblue;
     height: 97vh;
+
     align-items: center;
     justify-content: center;
-    background-color: rgb(49, 48, 48);
+    /* background-color: rgb(49, 48, 48); */
 }
 
 .formReg {
@@ -15,7 +16,8 @@
     /* border: 1px solid white; */
     border-radius: 15px;
     gap: 1rem;
-    background-color: black;
+    /* background-color: black; */
+    background-color: white;
     padding: 2rem;
     height: 80vh;
     width: 30vw;
@@ -33,26 +35,29 @@
     width: 20vw;
     height: 6vh;
     border-radius: 7px;
-    border: 1px solid grey;
+    /* border: 1px solid gray; */
     padding-left: 1rem;
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    /* color: white; */
 }
 
 .headReg {
-    color: white;
+    /* color: white; */
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .btnReg {
     border: none;
+    background-color: black;
+    color: white;
     width: 18.5rem;
     height: 6vh;
     border-radius: 20px;
     font-weight: 900;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1rem;
+
 }
 
 .errMsg {
