--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,7 +1,7 @@
 .Logcontainer {
     display: flex;
     flex-direction: column;
-    background-color: rgb(49, 48, 48);
+    /* background-color: rgb(49, 48, 48); */
     align-items: center;
     justify-content: center;
     height: 97vh;
@@ -11,11 +11,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: black;
+    /* background-color: black; */
     border-radius: 15px;
     border: 1px solid;
     padding: 3rem;
     height: 80vh;
+    
 }
 
 .formLog {
@@ -30,8 +31,8 @@
     width: 20rem;
     height: 6vh;
     border-radius: 7px;
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    /* color: white; */
     padding-left: 1rem;
     border: 1px solid grey;
 }
@@ -40,19 +41,35 @@
     width: 20rem;
     height: 6vh;
     border-radius: 20px;
-    background-color: white;
+    /* background-color: black; */
+    /* color:white; */
     border: none;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.btnd {
-    border: 1px solid grey;
+.loginBtn {
     width: 20rem;
     height: 6vh;
     border-radius: 20px;
     background-color: black;
     color: white;
+    border: none;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+
+
+.btnd {
+    border: 1px solid gray;
+    width: 20rem;
+    height: 6vh;
+    border-radius: 20px;
+    /* background-color: black; */
+    /* color: white; */
+    background-color: white;
     font-weight: 700;
 }
 
@@ -62,7 +79,7 @@
 }
 
 .headSign {
-    color: white;
+    /* color: white; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -72,7 +89,7 @@
 }
 
 .noAcc {
-    color: white;
+    /* color: white; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -80,3 +97,7 @@
     color: rgb(28, 69, 145);
     cursor: pointer;
 }
+
+input:focus {
+    border: 3px solid #1D9BF0;
+  }
