--- a/src/pages/register/create.module.css
+++ b/src/pages/register/create.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(49, 48, 48);
+    /* background-color: rgb(49, 48, 48); */
     height: 97vh;
 }
 
@@ -11,7 +11,8 @@
     flex-direction: column;
     align-items: center;
     /* border: 1px solid white; */
-    background-color: black;
+    /* background-color: black; */
+    background-color: white;
     border-radius: 10px;
     gap: 1.5rem;
     width: 25vw;
@@ -21,14 +22,29 @@
     width: 20vw;
     height: 6vh;
     border: none;
+    /* background-color: white; */
+    color:black;
     background-color: white;
+    border:1px solid grey;
+    border-radius: 20px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.btnAccount {
+    width: 20vw;
+    height: 6vh;
+    border: none;
+    /* background-color: white; */
+    /* color:black; */
+    background-color: black;
+    color:white;
     border-radius: 20px;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .createHead {
-    color: white;
+    /* color: white; */
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     width: 20vw;
