--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,7 +1,216 @@
+/* Default styles */
+.loginContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+
 .Logcontainer {
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(49, 48, 48); */
+    align-items: center;
+    justify-content: center;
+    height: 97vh;
+   
+}
+
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 15px;
+    border: 1px solid;
+   
+    height: 80vh;
+  
+   
+    
+}
+
+.formLog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:2rem;
+    gap: 0.5rem;
+    
+    /* border: 2px solid grey */
+}
+
+.inputlog {
+    border: none;
+    width: 18rem;
+    height: 4.2vh;
+    display: flex;
+    gap:1rem;
+    border-radius: 1px solid grey;
+    /* border-radius: 7px; */
+    padding-left: 1rem;
+    border: 1px solid grey;
+}
+
+.btn {
+    width: 20rem;
+    height: 6vh;
+    border-radius: 20px;
+    border: none;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.loginBtn {
+    width: 20rem;
+    height: 6vh;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+
+
+.btnd {
+    border: 1px solid gray;
+    width: 20rem;
+    height: 4.2vh;
+    border-radius: 20px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:0.5rem;
+    /* font-weight: 700; */
+}
+
+.btnd:hover {
+    background-color: rgb(172, 167, 167);
+    opacity: 1;
+    
+}
+
+
+.headSign {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.errMsg {
+    color: red;
+    font-size: .8rem;
+}
+
+.noAcc {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.signup {
+    color: rgb(28, 69, 145);
+    cursor: pointer;
+}
+
+/* Responsive styles */
+
+@media screen and (max-width: 475px) {
+    .Logcontainer {
+        height: auto;
+        padding: 1rem;
+    }
+    
+    .formContainer {
+        height: auto;
+    }
+    
+    .inputlog {
+        width: 100%;
+        height: 4.2vh;
+        font-size: 1rem;
+        border-radius: 1px solid grey;
+    }
+    
+    .btn, .loginBtn, .btnd {
+        width: 100%;
+        height: 4.2vh;
+        border-radius: 10px;
+        font-size: 0.8rem;
+    }
+    
+    .hr {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    /* Apply these styles for screens with a minimum width of 768px */
+    .Logcontainer {
+        height: 70vh;
+    }
+
+    .formContainer {
+        height: 60vh;
+    }
+    
+    .inputlog {
+        width: 23rem;
+        border-radius: 1px solid grey;
+    }
+    
+    .btn, .loginBtn, .btnd {
+        width: 25rem;
+        height: 4.2vh;
+        font-size: 0.8rem;
+    }
+    
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .Logcontainer {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 97vh;
@@ -11,7 +220,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* background-color: black; */
     border-radius: 15px;
     border: 1px solid;
     padding: 3rem;
@@ -31,8 +239,6 @@
     width: 20rem;
     height: 6vh;
     border-radius: 7px;
-    /* background-color: black; */
-    /* color: white; */
     padding-left: 1rem;
     border: 1px solid grey;
 }
@@ -41,8 +247,6 @@
     width: 20rem;
     height: 6vh;
     border-radius: 20px;
-    /* background-color: black; */
-    /* color:white; */
     border: none;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -67,8 +271,6 @@
     width: 20rem;
     height: 6vh;
     border-radius: 20px;
-    /* background-color: black; */
-    /* color: white; */
     background-color: white;
     font-weight: 700;
 }
@@ -79,7 +281,6 @@
 }
 
 .headSign {
-    /* color: white; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -89,7 +290,6 @@
 }
 
 .noAcc {
-    /* color: white; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -98,6 +298,5 @@
     cursor: pointer;
 }
 
-input:focus {
-    border: 3px solid #1D9BF0;
-  }
+
+ */
