--- a/src/pages/register/register.module.css
+++ b/src/pages/register/register.module.css
@@ -2,21 +2,148 @@
     display: flex;
     flex-direction: column;
     background-color: aliceblue;
-    height: 97vh;
-
+    min-height: 98vh;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(49, 48, 48); */
 }
 
 .formReg {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 1px solid white; */
     border-radius: 15px;
     gap: 1rem;
-    /* background-color: black; */
+    background-color: white;
+    padding: 2rem;
+    width: 90%;
+    max-width: 30rem;
+}
+
+
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.inputReg {
+    width: 100%;
+    height: 5vh;
+    border-radius: 7px;
+    padding-left: 1rem;
+}
+
+.headReg {
+    font-weight: 900;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.btnReg {
+    border: none;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 6vh;
+    border-radius: 20px;
+    font-weight: 900;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1rem;
+}
+
+.errMsg {
+    color: red;
+    font-size: .8rem;
+}
+
+
+
+
+
+
+
+@media (min-width:320px) {
+    .Regcontainer {
+        flex-direction: row;
+    }
+
+    .formReg {
+        max-width: none;
+        width: 50%;
+        height: auto;
+        padding: 2rem 4rem;
+    }
+   
+}
+
+@media (min-width: 768px) {
+    .Regcontainer {
+        flex-direction: row;
+    }
+
+    .formReg {
+        max-width: none;
+        width: 70%;
+        height: auto;
+        padding: 2rem 4rem;
+    }
+   
+}
+
+@media only screen and (min-width: 992px) {
+    .formReg {
+        width: 80%;
+    }
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .Regcontainer {
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    height: 97vh;
+
+    align-items: center;
+    justify-content: center;
+   
+}
+
+.formReg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    gap: 1rem;
     background-color: white;
     padding: 2rem;
     height: 80vh;
@@ -28,21 +155,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* border: 1px solid white; */
 }
 
 .inputReg {
     width: 20vw;
     height: 6vh;
     border-radius: 7px;
-    /* border: 1px solid gray; */
     padding-left: 1rem;
-    /* background-color: black; */
-    /* color: white; */
+    
 }
 
 .headReg {
-    /* color: white; */
+   
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -63,4 +187,4 @@
 .errMsg {
     color: red;
     font-size: .8rem;
-}
+} */
