--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 97vh;
+    background-color: rgb(192, 187, 187);
 }
 
 .formContainer {
