--- a/src/Components/FollowComponent/Follow.module.css
+++ b/src/Components/FollowComponent/Follow.module.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 .mainContainer {
-  background-color: black;
+  background-color:white;
   padding: 20px;
-  color: white;
+  color: black;
   border-radius: 20px;
   margin: 10px;
 }
@@ -30,10 +30,11 @@
 }
 .Btn{
     padding: 8px 15px;
-    background-color: white;
+    background-color: black;
     border-radius: 20px;
     border: none;
     font-weight: 700;
+    color:white
 
 
 }
