--- a/src/Components/Search/Search.module.css
+++ b/src/Components/Search/Search.module.css
@@ -3,18 +3,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
   
  
 }
 
 .searchInput{
-    background-color: rgb(36, 30, 30);
-    padding: 10px 30px;
+    background-color:#eff3f4;
     border: none;
+    padding: 10px 30px;
+   
     border-radius: 20px;
     width: 90%;
     font-size: 16px;   
-    color: white;
+    color: black;
     
    
 }
