--- a/src/Components/Trends/Trend.module.css
+++ b/src/Components/Trends/Trend.module.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
   }
   .mainContainer {
-    background-color: black;
+    background-color:#f7f9f9;
     padding: 20px;
-    color: white;
+    color: black;
     border-radius: 20px;
     margin: 10px;
   }
@@ -29,7 +29,7 @@
   }
   .nameSection p{
         font-size: 14px;
-        color: gray;
+        color: black;
   }
   .Link{
         text-decoration: none;
@@ -66,7 +66,7 @@
   }
   .nameSection{
     /* border: solid white 1px; */
-    padding: 2px;
+   /* padding: 2px; */
   /* }
   .nameSection p{
       padding: 2px;
