--- a/src/pages/register/create.module.css
+++ b/src/pages/register/create.module.css
@@ -54,6 +54,9 @@
 
 .termsdiv {
     width: 20vw;
+    /* display: flex;
+    flex-direction: column;
+    gap:1rem; */
 }
 
 .terms {
@@ -152,6 +155,9 @@
     .btnAccount{
         width:20vw;
     }
+   
+
+  
   }
 
   
