--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #1D9BF0;
 }
 
 
@@ -13,6 +14,9 @@
     align-items: center;
     justify-content: center;
     height: 97vh;
+    background-color: white;
+    padding:2rem;
+    border-radius: 20px;
    
 }
 
@@ -21,7 +25,6 @@
     flex-direction: column;
     justify-content: center;
     border-radius: 15px;
-    border: 1px solid;
    
     height: 80vh;
   
@@ -42,11 +45,11 @@
 .inputlog {
     border: none;
     width: 18rem;
-    height: 4.2vh;
+    height: 5.5vh;
     display: flex;
     gap:1rem;
     border-radius: 1px solid grey;
-    /* border-radius: 7px; */
+    border-radius: 7px;
     padding-left: 1rem;
     border: 1px solid grey;
 }
@@ -69,6 +72,20 @@
     border: none;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+
+}
+
+.forgotBtn {
+    width: 20rem;
+    height: 6vh;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
 
 }
 
@@ -77,7 +94,7 @@
 .btnd {
     border: 1px solid gray;
     width: 20rem;
-    height: 4.2vh;
+    height: 5.5vh;
     border-radius: 20px;
     background-color: white;
     display: flex;
@@ -85,6 +102,8 @@
     justify-content: center;
     align-items: center;
     gap:0.5rem;
+    font-weight: bold;
+    cursor: pointer;
     /* font-weight: 700; */
 }
 
@@ -113,6 +132,11 @@
     cursor: pointer;
 }
 
+.inputlog:focus{
+    border: 2px solid #1D9BF0;
+    outline:none;
+}
+
 /* Responsive styles */
 
 @media screen and (max-width: 475px) {
@@ -127,14 +151,14 @@
     
     .inputlog {
         width: 100%;
-        height: 4.2vh;
+        height: 5.5vh;
         font-size: 1rem;
         border-radius: 1px solid grey;
     }
     
     .btn, .loginBtn, .btnd {
         width: 100%;
-        height: 4.2vh;
+        height: 5.5vh;
         border-radius: 10px;
         font-size: 0.8rem;
     }
@@ -157,11 +181,12 @@
     .inputlog {
         width: 23rem;
         border-radius: 1px solid grey;
+        height:5.5vh;
     }
     
     .btn, .loginBtn, .btnd {
-        width: 25rem;
-        height: 4.2vh;
+        width: 23rem;
+        height: 5.5vh;
         font-size: 0.8rem;
     }
     
