--- a/src/pages/register/register.module.css
+++ b/src/pages/register/register.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: #1D9BF0;
+    /* background-color: rgb(240, 242, 245); */
     min-height: 98vh;
     align-items: center;
     justify-content: center;
@@ -15,6 +16,7 @@
     border-radius: 15px;
     gap: 1rem;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 2rem;
     width: 90%;
     max-width: 30rem;
@@ -73,7 +75,11 @@
     text-decoration: underline;
 }
 
-
+.closeRegisterButton{
+    width:100%;
+    text-align: start;
+    cursor: pointer;
+}
 
 @media (min-width: 768px) {
     .Regcontainer {
